--- a/views/perguntar.ejs
+++ b/views/perguntar.ejs
@@ -1,22 +1,25 @@
 <%- include('./partials/header.ejs')%>
-<body>
-    <%- include('./partials/navbar.ejs')%>
-    <div class="container">
-        <div class="card" id="formulario-pergunta">
-            <div class="card-header">
-                <h3>Realizar pergunta</h3>
+
+    <body>
+        <%- include('./partials/navbar.ejs')%>
+            <div class="container">
+                <%- include('./partials/popup.ejs')%>
+                    <div class="card" id="formulario-pergunta">
+                        <div class="card-header">
+                            <h3>Realizar pergunta</h3>
+                        </div>
+                        <div class="card-body">
+                            <form method="POST" action="/salvarpergunta" id="perguntaForm">
+                                <label>Título</label>
+                                <input type="text" placeholder="Título da pergunta" class="form-control" name="titulo">
+                                <br><label>Descrição</label>
+                                <textarea placeholder="Escreva sua pergunta" class="form-control"
+                                    name="descricao"></textarea>
+                                <br>
+                                <button class="btn btn-primary" id="btnAbrirModal">Perguntar</button>
+                            </form>
+                        </div>
+                    </div>
             </div>
-            <div class="card-body">
-                <form method="POST" action="/salvarpergunta">
-                    <label>Título</label>
-                    <input type="text" placeholder="Título da pergunta" class="form-control" name="titulo">
-                    <br><label>Descrição</label>
-                    <textarea placeholder="Escreva sua pergunta" class="form-control" name="descricao"></textarea>
-                    <br>
-                    <button class="btn btn-primary">Perguntar</button>
-                </form>
-            </div>
-        </div>
-    </div>
-</body>
-<%- include('./partials/footer.ejs')%>
+    </body>
+    <%- include('./partials/footer.ejs')%>
