fix:Bug para fechar o popup corrigido e bug para quando deletar a pergunta recarregar a página corrigido

--- a/views/partials/popup.ejs
+++ b/views/partials/popup.ejs
@@ -4,7 +4,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="exampleModalLabel">Confirmação da pergunta</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
@@ -12,7 +12,7 @@
                 Você tem certeza que não deseja escrever mais nada em sua pergunta ou descrição da pergunta?
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-danger" data-dismiss="modal">Não</button>
+                <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Não</button>
                 <button type="button" class="btn btn-success" id="btnSalvarAlteracoes">Sim</button>
             </div>
         </div>
