--- a/views/perguntar.ejs
+++ b/views/perguntar.ejs
@@ -5,18 +5,31 @@
             <div class="container">
                 <%- include('./partials/popup.ejs')%>
                     <div class="card" id="formulario-pergunta">
-                        <div class="card-header">
+                        <div class="card-header" style="display: flex; align-items: center;">
                             <h3>Realizar pergunta</h3>
                         </div>
                         <div class="card-body">
                             <form method="POST" action="/salvarpergunta" id="perguntaForm">
-                                <label>Título</label>
+                                <div style="display: flex; align-items: center; margin-bottom: 10px;">
+                                    <label>Título</label>
+                                    <span class="d-inline-block" style="margin-left: 12px;" tabindex="0" data-toggle="tooltip" title="Escreva a sua pergunta">
+                                        <button class="btn btn-primary" style="pointer-events: none;" type="button" disabled>?</button>
+                                    </span>
+                                </div>
                                 <input type="text" placeholder="Título da pergunta" class="form-control" name="titulo">
-                                <br><label>Descrição</label>
+                                <br>
+                                <div style="display: flex; align-items: center; margin-bottom: 10px;">
+                                    <label>Descrição</label>
+                                    <span class="d-inline-block" style="margin-left: 12px;" tabindex="0" data-toggle="tooltip" title="Escreva detalhes ou informações adicionais">
+                                        <button class="btn btn-primary" style="pointer-events: none;" type="button" disabled>?</button>
+                                    </span>
+                                </div>
                                 <textarea placeholder="Escreva sua pergunta" class="form-control"
                                     name="descricao"></textarea>
                                 <br>
-                                <button class="btn btn-primary" id="btnAbrirModal">Perguntar</button>
+                                <span class="d-inline-block" style="margin-left: 12px;" tabindex="0" data-toggle="tooltip" title="Preencha os campos para realizar a pergunta">
+                                    <button class="btn btn-primary" id="btnAbrirModal">Perguntar</button>
+                                </span>
                             </form>
                         </div>
                     </div>
