--- a/views/pergunta.ejs
+++ b/views/pergunta.ejs
@@ -28,6 +28,7 @@
             <br>
             <div class="card">
                 <div class="card-body">
+                    <p>@<strong><%= resposta.usuario.nome %></strong>
                     <p><%= resposta.corpo %></p>
                 </div>
             </div>
