--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -2,4 +2,14 @@
     <a class="navbar-brand" href="/">
         <img src="/img/guia.png" alt="Logo">
     </a>
+    <div class="ml-auto d-flex">
+        <% if (usuario) { %>
+            <a class="nav-link text-white" href="/logout">Logout</a>
+        <% } else { %>
+            <div class="d-flex">
+                <a class="nav-link text-white" href="/login">Entrar</a>
+                <a class="nav-link text-white ml-3" href="/cadastro">Cadastrar-se</a>
+            </div>
+        <% } %>
+    </div>
 </nav>
